CI-Host/www/default.css
body{
    margin-left: auto;
    margin-right: auto;
    min-width: 800px;
    max-width: 90%;
    background-color: #d0d0d0;
}

#header_hold{
    margin-left: 4px;
}

#footer_hold{

    width: 160px;
    margin-top: 16px;
    margin-left: auto;
    margin-right: auto;
}

.center{
text-align: center;
}

#site-tile-center-hold{
    margin-left: auto;
    margin-right: auto;
    width: 164px;
}

.site-title-hold{
    width: 160px;
    height: 30px;
    border: solid 2px black;
    background: white;
}
.site-title{
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
    display: inline;
}

.site-login-title-hold{
    width: 160px;
    height: 40px;
    border: solid 2px black;
    background: white;
}

.title-bold{
    font-weight: bolder
}

#content-hold{
    margin-top: 8px;
    width: 100%;
}

#message-hold{
    /*display: none;*/
    box-sizing: border-box;
    margin-bottom: 8px;
    border: #303030 solid 3px;
    width: 100%

}

#queue_hold{
    position: relative;
    display: inline-block;
    width: 25%;
    height: 85%;
    border: #303030 solid 3px;
    margin: -0px;
    margin-left: 0px;
    margin-right: 0.5%;
    box-sizing: border-box;

}

#form-hold{
    margin-left: auto;
    margin-right: auto;
    border: black solid 3px;
    padding: 8px;
    width: 300px;
}

#main_hold{
    position: relative;
    margin-left: 0px;
    display: inline-block;
    vertical-align: top;
    height: 85%;
    border: #303030 solid 3px;
    width: 74%;
    box-sizing: border-box;
    float: right;
}

#builds_hold{
    width: 100%;
    min-height: 100px;
}

.items_hold{
    overflow-y: auto;
}

p, a, h1, h2, h3, h4, h5{
    font-family: Arial, Helvetica, sans-serif;
    padding: 4px;
    margin-left: 8px;
    margin-top: 4px;
}

a.logout{

}

.panel-heading-tab{
    border-bottom: white solid 8px;
    background-color: #303030;
    box-sizing: border-box;
    height: 42px;
}

h4{
    padding: 8px;
    color: #d0d0d0;
    box-sizing: border-box;
    margin: 0px;
}

a.panel-tab-link{
    float: right;
    display: inline-block;
    font-size: 12px;
    color: #d0d0d0;
    border-bottom: 1px solid #d0d0d0;
    padding: 1px;
    padding-left: 2px;
    padding-right: 2px;
    margin-top: 7px;
    margin-right: 10px;
    vertical-align: text-bottom;
}

a.panel-tab-link:hover{
    color: #e8e8e8;
    border-bottom: 1px solid #e8e8e8;
}

a.panel-tab-link:active{
    color: #e8e8e8;
    border-bottom: 1px solid #c0c0c0;
}

h4.panel-heading{
    display: inline-block;
}

/* login form */
.login-form, .form-label{
    width: 100%;
    box-sizing: border-box;
}

p.form-label{
    padding: 2px;
    margin: 0px;
    font-weight: bolder;
}

/* Task template    */
/* project template */
/* build template   */
#template-item-hold{
    border-bottom: black groove 1px;
    margin: 6px;
}

.template-item-hold{
    display: block;
}

.template_item{
    margin: 4px;
}

p.template-no-content-message{
    margin: 12px 4px 4px 4px;
}

p.template-item-name{
    font-size: 16px;
    font-weight: bold;
    display: inline-block;
    text-transform: capitalize;
    margin: 4px 8px 8px 8px;
}

p.template-item-info{
    display: inline-block;
}

p.template-info{
    box-sizing: border-box;
    display: table-cell;
    width: 5%;
    margin: 2px;
    font-size: 14px;
    text-align: center;
    vertical-align: top;
}

p.template-build{
    box-sizing: border-box;
    width: 77.5%;
    overflow: hidden;
    text-overflow: ellipsis;
}

p.template-task{
    box-sizing: border-box;
    width: 70%;
    overflow: hidden;
    text-overflow: ellipsis;
}

a.template-item-right{
    float: right;
    padding-right: 10px;
    margin: 0px 2px 0px 2px;

    text-decoration: none;
}

a.template-item-inline{
    display: inline-block;
    font-size: 12px;
    color: #505050;
    border-bottom: 1px solid #505050;
    padding: 1px;
    padding-left: 2px;
    padding-right: 2px;
    margin-top: 5px;
    vertical-align: text-bottom;
}

a.template-item-inline:hover{
    color: #303030;
    border-bottom: 1px solid #303030;
}

a.template-item-inline:active{
    color: #181818;
    border-bottom: 1px solid #181818;
}

.link-no-href:hover{
    cursor: pointer;
}

#active_task_hold, #queued_tasks_hold{
    height: 35vh;
    overflow: auto;

}

.item_projects{
    height: 25vh
}

.item_builds{
    height: 45vh;
}

b.status_pass{
    color: green;
}

b.status_fail{
    color: red;
}

/* message template */
#message-items{
    box-sizing: border-box;
    width: 100%;
    max-height: 130px;
    overflow-y: auto;
}

p.message-status{
    width: 100px;
    display: inline-block;
}

p.message-body{
    display: inline-block;
    padding-left: 16px;
    border-left: black solid 2px;

}

p.message-status, p.message-body{
    margin-top: 4px;
    margin-bottom: 4px;
    padding-top: 4px;
    padding-bottom: 6px;
}

.stat-message, .stat-warning, .stat-error, .stat-fatal{
    font-weight: bolder;
}

.stat-warning{
    background-color: wheat;
}
.stat-error{
    background-color: salmon;
} 
.stat-fatal{
    background-color: darkmagenta;
}

